[gd_scene load_steps=28 format=3 uid="uid://cmdo4y67uis4f"]

[ext_resource type="Script" uid="uid://bj3uho672bvem" path="res://Scripts/NPCs/npc.gd" id="1_e8lvv"]
[ext_resource type="Shader" uid="uid://dmn0dmxfshr1d" path="res://Resource/Shaders/hit_flash.gdshader" id="2_5dkjo"]
[ext_resource type="Texture2D" uid="uid://j5b72bfewmqr" path="res://Assets/Characters/NPCs/Enemies/Prototype/No Outlines/players green x1.png" id="2_jwyqi"]
[ext_resource type="JSON" path="res://Dialogue_Files/Dialogue_test_2.json" id="2_mg3ue"]
[ext_resource type="PackedScene" uid="uid://cmbpwc3svcncr" path="res://Scenes/NPCs/npcs_state_machine.tscn" id="2_tklva"]
[ext_resource type="Script" uid="uid://cmu6mxc2vx1gg" path="res://Scripts/NPCs/States/idle.gd" id="3_d4vqv"]
[ext_resource type="Script" uid="uid://chveseg337sex" path="res://Scripts/NPCs/States/wander.gd" id="5_ysxli"]
[ext_resource type="Script" uid="uid://6yql0tuo5qyo" path="res://Scripts/NPCs/States/shoot.gd" id="6_7csx7"]
[ext_resource type="Script" uid="uid://xs4sakmnfrj1" path="res://Scripts/NPCs/States/chase.gd" id="6_m07t2"]
[ext_resource type="Script" uid="uid://bj2til3cuyu48" path="res://Scripts/NPCs/States/reload.gd" id="7_h6x30"]
[ext_resource type="Script" uid="uid://bp8vfrf041qxm" path="res://Scripts/NPCs/States/cool_down.gd" id="8_0q3ly"]
[ext_resource type="Script" uid="uid://15vf6aaeeha8" path="res://Scripts/NPCs/States/talk.gd" id="8_5xtl5"]
[ext_resource type="Script" uid="uid://deo4juuw4jita" path="res://Scripts/NPCs/States/die.gd" id="8_16q4q"]
[ext_resource type="PackedScene" uid="uid://cwormf6p6oqbo" path="res://Scenes/NPCs/npc_bullet.tscn" id="9_v5ibw"]
[ext_resource type="Script" uid="uid://hct8g0dwy6rm" path="res://Dialogue_Files/dialogue_box.gd" id="14_c55s6"]
[ext_resource type="LabelSettings" uid="uid://ck3j7eyrm2267" path="res://Resource/Labels/dialogues_label_settings.tres" id="14_ki3bk"]
[ext_resource type="Script" uid="uid://lngqm66mqljp" path="res://addons/ez_dialogue/ez_dialogue_node.gd" id="16_lgjjx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6da7p"]
size = Vector2(30, 35)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v5ibw"]
shader = ExtResource("2_5dkjo")
shader_parameter/flashColor = Color(1, 1, 1, 1)
shader_parameter/flashValue = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_40auk"]
size = Vector2(27.9999, 37)

[sub_resource type="Animation" id="Animation_okxx1"]
resource_name = "Death"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.35),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_a4b5n"]
resource_name = "Idle"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_f2xjk"]
resource_name = "Reloading"
length = 0.4
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.16, 0.24, 0.32),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20]
}

[sub_resource type="Animation" id="Animation_dpk7x"]
resource_name = "Running"
length = 0.4
loop_mode = 1
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_57c1o"]
resource_name = "Shooting"
length = 0.24
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.12, 0.18),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_kcs6m"]
resource_name = "Talking"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fbn5t"]
_data = {
&"Death": SubResource("Animation_okxx1"),
&"Idle": SubResource("Animation_a4b5n"),
&"Reloading": SubResource("Animation_f2xjk"),
&"Running": SubResource("Animation_dpk7x"),
&"Shooting": SubResource("Animation_57c1o"),
&"Talking": SubResource("Animation_kcs6m")
}

[node name="NPC" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 65536
collision_mask = 1537
script = ExtResource("1_e8lvv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -2.5)
shape = SubResource("RectangleShape2D_6da7p")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_v5ibw")
position = Vector2(0, -17)
scale = Vector2(2, 2)
texture = ExtResource("2_jwyqi")
hframes = 8
vframes = 13

[node name="Areas" type="Node2D" parent="Sprite2D"]
position = Vector2(0, 8.5)
rotation = 3.14159
scale = Vector2(0.5, -0.5)

[node name="HitArea" type="Area2D" parent="Sprite2D/Areas"]
position = Vector2(-27, 0)
collision_layer = 262144
collision_mask = 256

[node name="HitCollision" type="CollisionShape2D" parent="Sprite2D/Areas/HitArea"]
position = Vector2(2.99997, -2.50002)
shape = SubResource("RectangleShape2D_40auk")
disabled = true

[node name="RayCasts" type="Node2D" parent="Sprite2D"]

[node name="GRayCast" type="RayCast2D" parent="Sprite2D/RayCasts"]
position = Vector2(8, 8.5)
target_position = Vector2(0, 12)

[node name="WRayCast" type="RayCast2D" parent="Sprite2D/RayCasts"]
position = Vector2(0, 8.5)
target_position = Vector2(12, 0)
collision_mask = 3

[node name="ShootRayCast" type="RayCast2D" parent="Sprite2D/RayCasts"]
position = Vector2(0, 8.5)
target_position = Vector2(150, 0)
collision_mask = 258

[node name="PlayerDetector" type="RayCast2D" parent="Sprite2D/RayCasts"]
position = Vector2(0, 5)
target_position = Vector2(250, 0)
collision_mask = 258

[node name="GunBarrel" type="Marker2D" parent="Sprite2D"]
position = Vector2(8, 8)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fbn5t")
}

[node name="NPCsStateMachine" parent="." node_paths=PackedStringArray("startingState") instance=ExtResource("2_tklva")]
startingState = NodePath("Idle")

[node name="Idle" type="Node" parent="NPCsStateMachine" node_paths=PackedStringArray("wanderingState", "chasingState", "shootingState", "reloadingState", "talkingState", "deathState")]
script = ExtResource("3_d4vqv")
wanderingState = NodePath("../Wander")
chasingState = NodePath("../Chase")
shootingState = NodePath("../Shoot")
reloadingState = NodePath("../Reload")
talkingState = NodePath("../Talk")
deathState = NodePath("../Die")
animationName = "Idle"

[node name="Wander" type="Node" parent="NPCsStateMachine" node_paths=PackedStringArray("idleState", "chasingState", "shootingState", "reloadingState", "talkingState", "deathState")]
script = ExtResource("5_ysxli")
idleState = NodePath("../Idle")
chasingState = NodePath("../Chase")
shootingState = NodePath("../Shoot")
reloadingState = NodePath("../Reload")
talkingState = NodePath("../Talk")
deathState = NodePath("../Die")
animationName = "Running"

[node name="Chase" type="Node" parent="NPCsStateMachine" node_paths=PackedStringArray("idleState", "wanderingState", "cooldownState", "shootingState", "reloadingState", "talkingState", "deathState")]
script = ExtResource("6_m07t2")
idleState = NodePath("../Idle")
wanderingState = NodePath("../Wander")
cooldownState = NodePath("../CoolDown")
shootingState = NodePath("../Shoot")
reloadingState = NodePath("../Reload")
talkingState = NodePath("../Talk")
deathState = NodePath("../Die")
animationName = "Running"

[node name="CoolDown" type="Node" parent="NPCsStateMachine" node_paths=PackedStringArray("idleState", "chasingState", "deathState")]
script = ExtResource("8_0q3ly")
idleState = NodePath("../Idle")
chasingState = NodePath("../Chase")
deathState = NodePath("../Die")

[node name="Shoot" type="Node" parent="NPCsStateMachine" node_paths=PackedStringArray("idleState", "wanderingState", "chasingState", "reloadingState", "talkingState", "deathState")]
script = ExtResource("6_7csx7")
idleState = NodePath("../Idle")
wanderingState = NodePath("../Wander")
chasingState = NodePath("../Chase")
reloadingState = NodePath("../Reload")
talkingState = NodePath("../Talk")
deathState = NodePath("../Die")
bulletScene = ExtResource("9_v5ibw")
animationName = "Shooting"

[node name="Reload" type="Node" parent="NPCsStateMachine" node_paths=PackedStringArray("idleState", "wanderingState", "chasingState", "shootingState", "talkingState", "deathState")]
script = ExtResource("7_h6x30")
idleState = NodePath("../Idle")
wanderingState = NodePath("../Wander")
chasingState = NodePath("../Chase")
shootingState = NodePath("../Shoot")
talkingState = NodePath("../Talk")
deathState = NodePath("../Die")
reloadingTime = 0.5
animationName = "Reloading"

[node name="Talk" type="Node" parent="NPCsStateMachine" node_paths=PackedStringArray("idleState", "wanderingState", "chasingState", "shootingState", "reloadingState", "deathState")]
script = ExtResource("8_5xtl5")
idleState = NodePath("../Idle")
wanderingState = NodePath("../Wander")
chasingState = NodePath("../Chase")
shootingState = NodePath("../Shoot")
reloadingState = NodePath("../Reload")
deathState = NodePath("../Die")
dialogueJson = ExtResource("2_mg3ue")
animationName = "Talking"

[node name="Die" type="Node" parent="NPCsStateMachine" node_paths=PackedStringArray("idleState", "wanderingState", "chasingState", "shootingState", "reloadingState", "talkingState")]
script = ExtResource("8_16q4q")
idleState = NodePath("../Idle")
wanderingState = NodePath("../Wander")
chasingState = NodePath("../Chase")
shootingState = NodePath("../Shoot")
reloadingState = NodePath("../Reload")
talkingState = NodePath("../Talk")
animationName = "Death"

[node name="Timers" type="Node" parent="."]

[node name="ShootingTimer" type="Timer" parent="Timers"]

[node name="RGSTimer" type="Timer" parent="Timers"]
editor_description = "Roaming game states timer"

[node name="CooldownPeriodTimer" type="Timer" parent="Timers"]

[node name="ReloadingTimer" type="Timer" parent="Timers"]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -2.86102e-06)
scale = Vector2(27.2, 12.8)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="VisibleOnScreenNotifier2D"]
enable_node_path = NodePath("../..")

[node name="UI" type="CanvasLayer" parent="."]

[node name="DialogueBox" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("14_c55s6")

[node name="DialogueText" type="Label" parent="UI/DialogueBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -16.0
offset_right = 30.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "test test test"
label_settings = ExtResource("14_ki3bk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DialogueTimer" type="Timer" parent="UI/DialogueBox"]
wait_time = 10.479
autostart = true

[node name="EzDialogue" type="Node" parent="UI/DialogueBox"]
script = ExtResource("16_lgjjx")
metadata/_custom_type_script = "uid://lngqm66mqljp"

[connection signal="timeout" from="Timers/ShootingTimer" to="NPCsStateMachine/Shoot" method="_on_shooting_timer_timeout"]
[connection signal="timeout" from="Timers/RGSTimer" to="NPCsStateMachine/Idle" method="_on_rgs_timer_timeout"]
[connection signal="timeout" from="Timers/RGSTimer" to="NPCsStateMachine/Wander" method="_on_rgs_timer_timeout"]
[connection signal="timeout" from="Timers/CooldownPeriodTimer" to="NPCsStateMachine/CoolDown" method="_on_cooldown_period_timer_timeout"]
[connection signal="timeout" from="Timers/ReloadingTimer" to="NPCsStateMachine/Reload" method="_on_reloading_timer_timeout"]
[connection signal="timeout" from="UI/DialogueBox/DialogueTimer" to="UI/DialogueBox" method="_on_dialogue_timer_timeout"]
[connection signal="dialogue_generated" from="UI/DialogueBox/EzDialogue" to="NPCsStateMachine/Talk" method="_on_ez_dialogue_dialogue_generated"]
[connection signal="end_of_dialogue_reached" from="UI/DialogueBox/EzDialogue" to="NPCsStateMachine/Talk" method="_on_ez_dialogue_end_of_dialogue_reached"]
